# solobase

./: .dockerignore  .env.example  .env.production.example  .gitignore  ADMIN_ROUTES_REFACTOR.md  ARCHITECTURE_REVIEW.md  BILLING_SETUP.md  CLAUDE.md  CODE_REVIEW_REPORT.md  Cargo.toml  Dockerfile.fly  Makefile  NICE_TO_HAVE.md  PRODUCTS_EXTENSION_REVIEW.md  PR_SUMMARY.md  README.md  RELEASE.md  SECURITY.md  SECURITY_FIXES_COMPLETED.md  SOLOBASE_CONFIG_REFACTOR.md  WAFER_CLOUDFLARE_TODO.md  WORK_SCOPE.md  audit.toml  compile.sh  deploy-demo.sh  fix_packages.sh  fly-demo.toml  go.mod  go.sum  justfile  package-lock.json  package.json  platform.go  platform_standard.go  platform_wasm.go  repos_standard.go  repos_wasm.go  run-dev.sh  solobase.go  test_custom_tables.sh  (+2 more)
blocks/files/: Cargo.toml
blocks/files/src/: cloud.rs  helpers.rs  lib.rs  quota.rs  share.rs  storage_routes.rs
blocks/legalpages/: Cargo.toml
blocks/legalpages/src/: helpers.rs  lib.rs
blocks/products/: Cargo.toml
blocks/products/src/: handlers.rs  helpers.rs  lib.rs  models.rs  pricing.rs  purchase.rs  stripe.rs  variables.rs
blocks/profile/: Cargo.toml
blocks/profile/src/: lib.rs
blocks/projects/: Cargo.toml
blocks/projects/src/: helpers.rs  lib.rs
blocks/system/: Cargo.toml
blocks/system/src/: lib.rs
crates/solobase/: .env.example  .env.production.example  .gitignore  Cargo.toml  README.md  app.json  blocks.json  build.rs  extensions.json  package.json  playwright.config.ts  solobase-local.json  solobase.json  solobase.toml
crates/solobase-browser/: Cargo.toml
crates/solobase-browser/assets/: index.html.tmpl  loader.js.tmpl  sw.js.tmpl  t2i-engine.js  webllm-engine.js
crates/solobase-browser/js/: bridge.js
crates/solobase-browser/src/: asset_loader.rs  assets.rs  bridge.rs  convert.rs  crypto.rs  database.rs  db_codec.rs  helpers.rs  lib.rs  logger.rs  network.rs  runtime.rs  storage.rs
crates/solobase-browser/tests/: bundle_integration.rs
crates/solobase-bundle/: Cargo.toml
crates/solobase-bundle/assets/: embed-engine.js  index.html.tmpl  sw.js.tmpl
crates/solobase-bundle/src/: assets.rs  lib.rs
crates/solobase-bundle/tests/: bundle_integration.rs
crates/solobase-cli/: Cargo.toml
crates/solobase-cli/src/: build.rs  cmd.rs  config.rs  lib.rs  main.rs  serve.rs  skills.rs
crates/solobase-cli/tests/: integration_smoke.rs
crates/solobase-cloudflare/: .gitignore  CUSTOM_BLOCKS.md  Cargo.toml  WAF_RULES.md  build-blocks.sh  package.json  tsconfig.json  wrangler.toml
crates/solobase-cloudflare/migrations/: 0001_init.sql  0002_tenant_usage.sql  0003_subscriptions.sql  0004_seed_plan_templates.sql  0005_seed_defaults.sql  0006_project_isolation.sql  0007_auth_users_rebuild.sql
crates/solobase-cloudflare/src/: billing.rs  cf_api.rs  cf_context.rs  config_cache.rs  config_service.rs  config_source.rs  control.rs  convert.rs  crypto_service.rs  d1_block.rs  database.rs  helpers.rs  kv_cached_db.rs  lib.rs  logger_service.rs  network_service.rs  project.rs  provision.rs  r2_block.rs  runner.rs  runtime_cache.rs  schema.rs  service_blocks.rs  storage.rs  storage_sync.rs  tenant.rs  usage.rs  webhooks.rs
crates/solobase-cloudflare/tests/: api_surface.rs
crates/solobase-cloudflare/worker/: billing.ts  control.ts  convert.ts  dispatch.ts  email.ts  generate-migration.ts  host.ts  index.ts  project.ts  rate-limit.ts  static.ts  tenant.ts  types.ts  usage.ts  wasm-loader.ts
crates/solobase-core/: Cargo.toml  PLAN.md  wafer.json
crates/solobase-core/src/: admin_schema.rs  boot.rs  builder.rs  cache.rs  cache_key.rs  config_source.rs  config_vars.rs  crypto.rs  deploy_init.rs  endpoint_match.rs  features.rs  http.rs  kv.rs  lib.rs  messages_schema.rs  migration_helper.rs  migrations.rs  multipart.rs  pipeline.rs  plans.rs  routing.rs  test_support.rs  util.rs
crates/solobase-core/tests/: autoreg_smoke.rs  env_config_source.rs  extra_routes_test.rs  lockfile_e2e.rs
crates/solobase-native/: Cargo.toml
crates/solobase-native/src/: app_config.rs  crypto.rs  database.rs  env.rs  hooks.rs  lib.rs  log_init.rs  logger.rs  main.rs  network.rs  serve.rs  storage.rs
crates/solobase-native/tests/: factory_smoke.rs
crates/solobase-plans/: Cargo.toml
crates/solobase-plans/src/: lib.rs
crates/solobase-server/: Cargo.toml
crates/solobase-server/src/: config.rs  main.rs
crates/solobase-web/: Cargo.toml  Makefile  package-lock.json  package.json  solobase.toml
crates/solobase-web-bundle/: Cargo.toml
crates/solobase-web-bundle/src/: build_id.rs  hash.rs  lib.rs  main.rs  manifest.rs  rename.rs  template.rs
crates/solobase-web-bundle/tests/: integration.rs
crates/solobase-web/js/: ai-bridge.js  bridge.js  index.html  loader.js  manifest.json  sw.js  sw.js.tmpl  webllm-engine.js
crates/solobase-web/src/: asset_loader.rs  bridge.rs  config.rs  convert.rs  crypto.rs  database.rs  lib.rs  llm.rs  logger.rs  network.rs  storage.rs
crates/solobase-web/tests/: playwright.config.ts  playwright.visual-baseline.config.ts
crates/solobase-worker/: Cargo.toml  provision-cloud.sh  wrangler.toml
crates/solobase-worker/src/: convert.rs  crypto_service.rs  database.rs  dispatcher.rs  helpers.rs  lib.rs  logger_service.rs  network_service.rs  schema.rs  service_blocks.rs  storage.rs
crates/solobase/.claude/: settings.local.json
crates/solobase/blocks/: cloud-dashboard
crates/solobase/docs/: AGENT_TOOLS_DESIGN.md  BUILDS_REFACTOR_PLAN.md  WAFER_RUNTIME_ARCHITECTURE.md  WAFER_RUST_RUNTIME.md  WAFER_SOLOBASE.md
crates/solobase/frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
crates/solobase/scripts/: dev.sh  screenshots.mjs  stripe-mock.mjs  test.sh
crates/solobase/site/: index.html
crates/solobase/src/: app_config.rs  builder.rs  embedded.rs  gen_schema.rs  lib.rs  main.rs  services.rs  system_logs.rs
crates/solobase/tests/: cli_args.rs  deploy_init.rs  dry_run_goldens.rs  flow_sealed_native.rs  flow_sealed_web.rs  helpers_blocks.rs  helpers_cloudflare_assets.rs  helpers_cloudflare_env.rs  (+5 more)
examples/minimal-browser/: Cargo.toml  README.md
(+1575 files in other folders)
