[workspace]
resolver = "2"
members = [
    "crates/solobase",
    "crates/solobase-core",
    "crates/solobase-native",
    "crates/solobase-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Core
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock", "wasmbind"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
tracing-opentelemetry = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[workspace.lints.clippy]
redundant_clone = "warn"
large_enum_variant = "warn"
needless_collect = "warn"
uninlined_format_args = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"

[workspace.lints.rust]
unused_must_use = "warn"
