[workspace]
resolver = "2"
members = [
    "crates/solobase-browser",
    "crates/solobase-core",
    "crates/solobase-native",
    "crates/solobase",
    "crates/solobase-web",
    "examples/minimal-browser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# WAFER runtime (git deps pinned to rev)
wafer-run = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul", default-features = false }
wafer-block = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-core = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-sql-utils = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-config = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-cors = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-crypto = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-http-listener = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-inspector = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-local-storage = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-logger = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-network = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-readonly-guard = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-router = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-s3 = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-security-headers = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-sqlite = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-web = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-postgres = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }
wafer-block-fastembed = { git = "https://github.com/wafer-run/wafer-run", branch = "binary-transport-overhaul" }

# Core
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock", "wasmbind"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
tracing-opentelemetry = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "v7"] }
sha2 = "0.10"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[workspace.lints.clippy]
redundant_clone = "warn"
large_enum_variant = "warn"
needless_collect = "warn"
uninlined_format_args = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"

[workspace.lints.rust]
unused_must_use = "warn"
