[workspace]

[package]
name = "solobase-block-products"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Solobase products block — WASM Component build"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.32"
wafer-core = { path = "../../../wafer-run/crates/wafer-core", features = ["wasm-component"] }
wafer-block = { path = "../../../wafer-run/crates/wafer-block" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
