[workspace]

[package]
name = "solobase-block-profile"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Solobase profile block — WASM Component build"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
