[workspace]

[package]
name = "solobase-block-deployments"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Solobase deployments block — WASM Component build"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.32"
wafer-core = { path = "../../../wafer-run/crates/wafer-core", features = ["wasm-component"] }
wafer-block = { path = "../../../wafer-run/crates/wafer-block" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
