[package]
name = "solobase-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser platform services + Service-Worker plumbing for WAFER-in-browser applications"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Request", "Response", "ResponseInit",
    "Headers", "ReadableStream",
    "Url",
    "console",
] }
js-sys = "0.3"
# Bridges a Rust `Stream<Item = JsValue>` to a JS `ReadableStream`. Used by
# `convert::output_to_response` so streaming feature blocks (text/event-stream
# responses, etc.) can flush body chunks to the browser as they're produced
# instead of buffering the entire response.
wasm-streams = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { workspace = true }
wafer-run = { workspace = true }
wafer-core = { workspace = true }
wafer-block = { workspace = true }
wafer-block-config = { workspace = true }
wafer-block-crypto = { workspace = true }
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", default-features = false }
serde-wasm-bindgen = "0.6"
hex = "0.4"
pbkdf2 = "0.12"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
base64ct = { version = "1", features = ["alloc"] }
bytemuck = { version = "1", default-features = false }

# Used by the bundler module (tools/bundle):
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"] }

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
