[package]
name = "solobase-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native web-bundle tooling for `solobase build --target web`: static framework assets + the wasm-pack output hashing/manifest/template bundler"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
