[package]
name = "solobase-cloudflare"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cloudflare Workers adapter for solobase (D1, R2, wasm crypto/network, worker entry helpers)"

[lib]
# `rlib` so the `pub async fn run` worker entry shim is consumable from
# other Rust crates (e.g. wafer-site's cloudflare cdylib calling
# `solobase_cloudflare::run` from its `#[event(fetch)]` handler).
# `cdylib` retained for direct use by `worker-build`.
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Reserved for the future wasmi-on-wasm "user-uploaded blocks" feature.
# Disabled in v1; kept here for parity with solobase-native.
custom-blocks = []

[dependencies]
# WAFER runtime
wafer-run = { workspace = true }
wafer-block = { workspace = true }
wafer-core = { workspace = true }

# Solobase shared core
solobase-core = { path = "../solobase-core", default-features = false }

# Cloudflare Workers SDK
worker = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto (wasm-compatible)
hmac = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
# uuid needs the "js" feature for wasm (uses js_sys random); inherit v4+v7 from workspace
uuid = { workspace = true, features = ["js"] }

# Time
chrono = { workspace = true }

# Async
async-trait = { workspace = true }

# Templating
maud = { workspace = true }

[lints]
workspace = true
