[package]
name = "solobase-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solobase shared platform abstraction — routing, crypto, features, pipeline, and backend block factories"

[lib]
name = "solobase_core"
path = "src/lib.rs"

[features]
default = ["sqlite", "storage-local", "llm"]
sqlite = []
postgres = []
storage-local = []
storage-s3 = []
# LLM feature block (`suppers-ai/llm`) + its `ProviderLlmService`.
# Phase A's provider service uses `tokio::spawn` + `reqwest::Response`
# futures that are not Send on wasm32-unknown-unknown. Browser LLM
# support arrives in Phase C via a separate `BrowserLlmService`.
# Gate the whole block module off so wasm32 builds compile clean.
llm = ["dep:tokio", "dep:tokio-stream"]
# Native ONNX-backed embedding block (suppers-ai/fastembed). Pulls in
# wafer-block-fastembed which depends on fastembed-rs / ONNX Runtime —
# heavy native-only dep, so gate it behind a feature so consumers that
# don't need local embeddings don't pay the build cost.
native-embedding = ["dep:wafer-block-fastembed"]

[dependencies]
# WAFER types + WASM interpreter (wasmi required for lockfile Path B loader)
wafer-run = { workspace = true, features = ["wasmi"] }
# wafer-core for clients and interface traits
wafer-core = { workspace = true }
# SQL utilities (query builders, value conversion)
wafer-sql-utils = { workspace = true }
# SQL query builder (used via wafer-sql-utils, re-exported for complex conditions)
sea-query = "0.32"
# Native ONNX embeddings (optional — gated behind `native-embedding`).
wafer-block-fastembed = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto
sha2 = { workspace = true }
hmac = "0.12"
hkdf = "0.12"
base64 = "0.22"
base64ct = { version = "1", features = ["alloc"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc", "rand"] }
getrandom = "0.2"

# Time
chrono = { workspace = true }

# Unique IDs for repo row generation
uuid = { workspace = true }

# Async
async-trait = { workspace = true }
futures = "0.3"
tokio-util = "0.7"
thiserror = "2"
# tokio / tokio-stream / reqwest are only used by the LLM providers
# module (native HTTP streaming + `tokio::spawn`). That module is gated
# behind the `llm` feature — keep these deps optional so wasm32 builds
# that turn the feature off don't pull in the `rt-multi-thread` tokio
# feature (forbidden on wasm) or the native `reqwest` stack.
tokio = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true }
# HTTP client used by the OAuth provider implementations (always on) and
# the LLM provider streaming service (gated behind `llm`). The `stream`
# feature is required for SSE streaming in the LLM block.
reqwest = { workspace = true, features = ["stream"] }

# URL parsing/building for OAuth authorize_url assembly.
url = "2"

# HTML sanitization
ammonia = "4"

# SSR templating
maud = "0.26"

# Logging
tracing = "0.1"

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "net"] }
tempfile = "3"
wafer-block-sqlite = { workspace = true }
wafer-block-crypto = { workspace = true }
wafer-block-http-listener = { workspace = true }
async-trait = { workspace = true }
# Layer-3 HTTP end-to-end tests (tests/auth_http) drive the block through
# a real axum server on an ephemeral port using reqwest as the client.
# (reqwest itself comes from the main `[dependencies]` section now.)
axum = "0.8"
# Mock upstream OAuth providers in integration tests.
wiremock = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
