[package]
name = "solobase-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solobase shared platform abstraction — routing, crypto, features, pipeline, and backend block factories"

[lib]
name = "solobase_core"
path = "src/lib.rs"

[features]
# Per-block features default to enabled so the native binary + in-tree
# integration tests see every block that was previously unconditionally
# compiled. `block-fastembed` is deliberately OFF here — previously
# `mod fastembed` was only compiled under `native-embedding`, so adding
# it to defaults would expand the default block set and shift baseline
# screenshots / block listings. Native binaries that want fastembed opt
# in via `native-embedding` (which implies `block-fastembed`).
default = [
    "sqlite",
    "storage-local",
    "llm",
    "block-files",
    "block-messages",
    "block-vector",
    "block-llm",
    "block-legalpages",
    "block-userportal",
    "block-products",
]
sqlite = []
postgres = []
storage-local = []
storage-s3 = []
# Enable WASM block loading via the wasmi interpreter for auto-discovery.
wasm = ["wafer-run/wasm"]
# LLM feature block (`suppers-ai/llm`) + its `ProviderLlmService`.
# Phase A's provider service uses `tokio::spawn` + `reqwest::Response`
# futures that are not Send on wasm32-unknown-unknown. Browser LLM
# support arrives in Phase C via a separate `BrowserLlmService`.
# Gate the whole block module off so wasm32 builds compile clean.
#
# `reqwest/stream` is gated here too because it pulls `wasm-streams 0.4`
# on wasm32, which conflicts with `worker`'s `wasm-streams 0.5` — see
# the FFI symbol clash in `worker-build`. OAuth providers don't need
# streaming bodies; only the SSE LLM provider does.
#
# Implies `block-llm` because the provider service backs the
# `suppers-ai/llm` block dispatch; turning off `block-llm` while leaving
# `llm` on would still drag the block module in.
#
# `block-messages` is intentionally NOT implied: PR #191 hoisted the
# messages table/column constants used by `blocks::llm::pages` into
# `solobase-core::messages_schema`, so the llm UI no longer depends on
# the messages block module being compiled in. Enabling `llm` without
# `block-messages` now compiles cleanly.
llm = [
    "dep:tokio",
    "dep:tokio-stream",
    "dep:reqwest",
    "reqwest/stream",
    "block-llm",
]
# Native ONNX-backed embedding block (suppers-ai/fastembed) + SQLite
# vector service. Pulls in wafer-block-fastembed (ONNX Runtime) and
# enables the `vectors` feature of wafer-block-sqlite (sqlite-vec).
# Required to register the `suppers-ai/vector` feature block.
#
# Implies `block-fastembed` and `block-vector` — the native-embedding
# path registers both blocks; leaving them off while turning this on
# would compile-fail.
native-embedding = [
    "dep:wafer-block-fastembed",
    "dep:wafer-block-sqlite",
    "dep:rusqlite",
    "block-fastembed",
    "block-vector",
]

# Per-block opt-in features. Enabled by default so the native binary +
# in-tree integration tests see every block; consumers that want to
# trim the WASM bundle (specifically wafer-site on
# wasm32-unknown-unknown via the cloudflare adapter) take the crate
# with `default-features = false` and pick the subset they actually
# register at boot.
#
# `block-vector` implies `block-llm` because (post the PR #187 untangle)
# vector reaches llm via `ctx.call_block("suppers-ai/llm", …)` at
# ingestion time. Calls fail with a runtime 404 if the llm block is
# absent — so a build that has vector enabled but llm absent compiles
# but cannot finish an ingestion. Implying the dep at the Cargo level
# keeps that pairing honest.
block-files = []
block-messages = []
block-vector = ["block-llm"]
block-llm = []
block-legalpages = ["dep:pulldown-cmark"]
block-userportal = []
block-products = []
# `block-fastembed` pulls in `wafer-block-fastembed` (ONNX Runtime, ~100 MB
# of native deps). The `native-embedding` feature implies this — leaving
# this on without `native-embedding` is fine and just installs the block
# without the SqliteVecService that pairs with it.
block-fastembed = ["dep:wafer-block-fastembed"]

[dependencies]
# WAFER types. The wasmi interpreter is no longer pulled in unconditionally:
# the WasmiBlock use sites in builder.rs (discovery + Path B loader) are
# already gated under solobase-core's `wasm` feature, which itself activates
# `wafer-run/wasm`. Consumers that don't need runtime WASM-block loading
# (e.g. wafer-site) drop wasmi entirely.
wafer-run = { workspace = true }
# wafer-core for clients and interface traits
wafer-core = { workspace = true }
# wafer-block — wire types + codec used directly by feature blocks that
# encode/decode service payloads (e.g. llm chunks, vector queries).
wafer-block = { workspace = true }
# SQL utilities (query builders, value conversion)
wafer-sql-utils = { workspace = true }
# SQL query builder (used via wafer-sql-utils, re-exported for complex conditions)
sea-query = "0.32"
# Native ONNX embeddings (optional — gated behind `native-embedding`).
wafer-block-fastembed = { workspace = true, optional = true }
# SQLite vector service (optional — gated behind `native-embedding`).
# Both deps required together: vector service needs a sqlite-vec-enabled
# connection, embedding service is the only way to fulfil the
# `wafer-run/vector` block's EmbeddingService slot.
wafer-block-sqlite = { workspace = true, optional = true, features = ["vectors"] }
rusqlite = { workspace = true, optional = true }

# Middleware blocks (always registered by the builder).
wafer-block-cors = { workspace = true }
wafer-block-inspector = { workspace = true }
wafer-block-readonly-guard = { workspace = true }
wafer-block-router = { workspace = true }
wafer-block-security-headers = { workspace = true }
wafer-block-web = { workspace = true }

# Crypto primitives (single-source JWT/HMAC/HKDF stack consumed by the
# `crypto` module + feature blocks) and the service block config trait
# needed by the builder.
wafer-block-crypto = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto. The JWT/HMAC/HKDF/argon2 primitives live in
# `wafer_block_crypto::primitives` (single source of truth) — only the
# hashing/encoding helpers used directly by feature blocks remain here.
sha2 = { workspace = true }
hex = { workspace = true }
base64ct = { version = "1", features = ["alloc"] }
getrandom = "0.2"

# Time
chrono = { workspace = true }

# Unique IDs for repo row generation
uuid = { workspace = true }

# Async
async-trait = { workspace = true }
futures = "0.3"
tokio-util = "0.7"
thiserror = "2"
# tokio / tokio-stream / reqwest are only used by the LLM providers
# module (native HTTP streaming + `tokio::spawn`). That module is gated
# behind the `llm` feature — keep these deps optional so wasm32 builds
# that turn the feature off don't pull in the `rt-multi-thread` tokio
# feature (forbidden on wasm) or the native `reqwest` stack.
tokio = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true }
# HTTP client used by the OAuth provider implementations (always on) and
# the LLM provider streaming service (gated behind `llm`). The `stream`
# sub-feature — required for SSE streaming in the LLM block — is added
# by the `llm` feature, not here, because it pulls `wasm-streams 0.4`
# on wasm32 which conflicts with `worker`'s `wasm-streams 0.5`.
reqwest = { workspace = true, optional = true }

# URL parsing/building for OAuth authorize_url assembly + form-body encode/
# decode (`url::form_urlencoded`). `percent-encoding` (url's own dependency)
# drives `url_path_encode`'s RFC-3986 path-segment AsciiSet.
url = "2"
percent-encoding = "2"

# Markdown → HTML renderer for the legalpages block. Replaces the
# ammonia HTML-sanitizer pipeline. Optional + gated under
# `block-legalpages` so consumers that disable that block (wafer-site)
# drop pulldown-cmark + the html5ever transitive subtree entirely.
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"], optional = true }

# SSR templating
maud = "0.26"

# Logging
tracing = "0.1"

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "net"] }
tempfile = "3"
# Dev-dep so integration tests can drive the SQLite database service even
# when the `native-embedding` feature (which makes wafer-block-sqlite a
# regular optional dep) is off.
wafer-block-sqlite = { workspace = true }
wafer-block-http-listener = { workspace = true }
async-trait = { workspace = true }
# Layer-3 HTTP end-to-end tests (tests/auth_http) drive the block through
# a real axum server on an ephemeral port using reqwest as the client.
# (reqwest itself comes from the main `[dependencies]` section now.)
axum = "0.8"
# Mock upstream OAuth providers in integration tests.
wiremock = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
# `uuid` on wasm32 needs a JS-backed RNG source (uuid 1.21+ compile-errors
# without one of `js`, `rng-getrandom`, or `rng-rand`). Consumers like
# solobase-cloudflare and solobase-web already enable `uuid/js` explicitly
# in their own manifests; this stanza makes a bare
# `cargo check -p solobase-core --target wasm32-unknown-unknown` build
# clean too, without affecting native builds.
uuid = { workspace = true, features = ["js"] }
